SF Primes/src/objects/Account_Dashboard_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>All_Open_Cases_Report_Id__c</fullName>
        <label>All Open Cases Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buy_Sells_Report_Id__c</fullName>
        <label>Buy/Sells Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Cases_Report_Id__c</fullName>
        <label>Content Cases Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFS_Data_Ops_Cases_Report_Id__c</fullName>
        <label>IFS-Data Ops Cases Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboarding_Cases_Report_Id__c</fullName>
        <label>Onboarding Cases Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities_Report_Id__c</fullName>
        <label>Opportunities Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Cancellations_Report_Id__c</fullName>
        <label>Pending Cancellations Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Downgrades_Report_Id__c</fullName>
        <label>Pending Downgrades Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Support_Cases_Report_Id__c</fullName>
        <label>Technical Support Cases Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIP_Report_Id__c</fullName>
        <label>WIP Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Account Dashboard Settings</label>
</CustomObject>